--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@mui/base": "^5.0.0-beta.3",
     "express": "^4.18.2",
+    "mui-file-input": "^2.0.0",
     "nodemon": "^2.0.22",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
