--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
