--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "react-hot-toast": "^2.4.1"
   }
 }
