--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.13.3",
+    "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.30.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
