--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,10 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui-treasury/components": "^1.10.1",
+    "@mui-treasury/styles": "^1.13.1",
     "@mui/material": "^5.13.3",
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.30.0",
