--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui-treasury/components": "^1.10.1",
     "@mui-treasury/styles": "^1.13.1",
+    "@mui/base": "^5.0.0-beta.10",
     "@mui/material": "^5.13.3",
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.30.0",
