--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nodemon": "^2.0.22",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "sass": "^1.62.1"
   }
 }
