--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/base": "^5.0.0-beta.3",
     "@mui/joy": "^5.0.0-beta.1",
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "mui-file-input": "^2.0.0",
     "nodemon": "^2.0.22",
