--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "dotenv": "^16.3.1",
-    "react-toastify": "^9.1.3"
+    "email-validator": "^2.0.4",
+    "react-toastify": "^9.1.3",
+    "zxcvbn": "^4.4.2"
   }
 }
