--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.4.0",
     "babel-plugin-macros": "^3.1.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "email-validator": "^2.0.4",
     "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -31,7 +33,8 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.0.3",
-    "sass": "^1.65.1"
+    "sass": "^1.65.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
