--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "routes": [
-    { "src": "/api/.*", "dest": "/api/index.js" },
+    { "src": "/(.*)", "dest": "/index.js" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
