--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,7 +1,5 @@
 {
   "version": 2,
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.js" },
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  "builds": [{ "src": "index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
 }
