--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
+  "name": "Noir-Rose",
+  "functions": {
+    "index.js": {
+      "runtime": "@vercel/node@1.9.1"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "index.js"
-    }
-  ]
+  },
+  "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
 }
