--- a/api/vercel.json
+++ b/api/vercel.json
@@ -6,5 +6,5 @@
       "runtime": "@vercel/node@1.9.1"
     }
   },
-  "routes": [{ "src": "/(.*)", "dest": "/index.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "index.js" }]
 }
