--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,10 +1,5 @@
 {
   "version": 2,
-  "name": "Noir-Rose",
-  "functions": {
-    "index.js": {
-      "runtime": "@vercel/node@1.9.1"
-    }
-  },
-  "routes": [{ "src": "/(.*)", "dest": "index.js" }]
+  "builds": [{ "src": "index.ts", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/index.ts" }]
 }
